# governance

./: .gitignore  .gitreview  .stestr.conf  .yamllint  .zuul.yaml  CHAIR.rst  README.md  README.rst  bindep.txt  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
goals/: index.rst  template.rst  template.txt
openstack_governance/: _check_schema.py  _wiki.py  _yamlutils.py  governance.py  members.py  projects.py  projects_schema.yaml  yamltools.py  yamlutils.py
pre-history/: README  meetings
reference/: OpenStack-name-in-external-services.rst  base-services.rst  charter  charter.rst  comparison-of-official-group-structures.rst  distributed-project-leadership.rst  dropping-projects.rst  election-exceptions.rst  emerging-technology-and-inactive-projects.rst  extra-atcs  foundation-board-repos.yaml  help-most-needed.rst  house-rules.rst  incubation-integration-requirements  incubation-integration-requirements.rst  index.rst  irc.rst  joining-tc.rst  legacy.yaml  licensing.rst  members  members.yaml  membership.rst  new-language-requirements.rst  new-programs-requirements  new-programs-requirements.rst  new-projects-requirements.rst  opens.rst  popup-teams.rst  principles.rst  programs.yaml  project-testing-interface.rst  projects.yaml  release-naming.rst  retired-projects.yaml  role-of-the-tc.rst  service-project-naming.rst  sig-repos.rst  sigs-repos.yaml  tag-template.rst  (+13 more)
resolutions/: 20131106-ceilometer-and-heat-official-names  20131106-ceilometer-and-heat-official-names.rst  20140211-tc_defcore_response  20140211-tc_defcore_response.rst  20140402-defcore-designated-sections-guidelines  20140402-defcore-designated-sections-guidelines.rst  20140617-defcore-capabilities-scoring.rst  20140711-election-activities.rst  20140909-cla.rst  20141128-elections-process-for-leaderless-programs.rst  20141202-project-structure-reform-spec.rst  20150512-utc.rst  20150615-stackforge-retirement.rst  20150901-programming-languages.rst  20151211-bring-your-own-kernel.rst  20160106-mission-amendment.rst  20160705-stewardship.rst  (+50 more)
(+234 files in other folders)
