[metadata]
name = openstack-governance
version = 2014.1
summary = OpenStack Governance Documents
description-file =
    README.rst
author = OpenStack TC
author-email = openstack-tc@lists.openstack.org
home-page = http://www.openstack.org/

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[flake8]
ignore = E501,E226,H405