[metadata]
name = openstack-governance
version = 2014.1
summary = OpenStack Governance Documents
description-file =
    README.rst
author = OpenStack TC
author-email = openstack-tc@lists.openstack.org
home-page = http://www.openstack.org/

[files]
packages =
    openstack_governance

[flake8]
ignore = E501,E226,H405

[entry_points]
console_scripts =
    osg-check-schema = openstack_governance._check_schema:main
